kqed/src/objects/SFDC_Related_Bug__c.object
<CustomObject>
    <description>Connector object to relate Bugs.</description>
    <fields>
        <fullName>Reverse_Relationship__c</fullName>
        <label>Reverse Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Bug_Num__c</fullName>
        <label>Related Bug Num:</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N50000001QGnxEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N50000001QGnwEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Identifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won&apos;t Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <type>Date</type>
    </fields>
    <label>Related Bug</label>
    <nameField>
        <displayFormat>BugRel-{00000}</displayFormat>
        <label>Related Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>